cmake_minimum_required(VERSION 3.11)

add_subdirectory(HttpClient)
add_subdirectory(HttpServer)
add_subdirectory(logger)
add_subdirectory(executor)
add_subdirectory(common)
add_subdirectory(YanCoor)
add_subdirectory(OpenWeather)
add_subdirectory(Db)
add_subdirectory(InMemoryDb)
add_subdirectory(Postgre)

